adding style for the page

--- a/index.htm
+++ b/index.htm
@@ -18,16 +18,11 @@
 </aside>
 
 <main id="main">
-    <h2><strong>Person</strong> Wealth
-    </h2>
-</main>
-
-
-
-
-
-
+    <h2><strong>Person</strong> Wealth</h2>
+  </main>
 
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
